data/all_generated_tests/raw_wast_tests/br_table_InvalidorInconsistentControlFlowGraph_2369.wast
;; 9. **Test for Improper Operand Stack Handling in Branches:**    - **Description:** Design a test where `br_table` leads to various target labels that require different operand stack configurations, possibly leading to CFG inconsistencies if improperly managed.    - **Constraint Checked:** Consistent operand stack unwinding and re-application across branches within `br_table` handling.

(assert_invalid
  (module
    (func $improper-stack-handling
      (block (result i32)
        (i32.const 1) (i32.const 2)
        (br_table 0 1 2 (i32.const 0))
      )
    )
  )
  "type mismatch"
)